# nt-redaction-back-end

./: .gitignore  Procfile  README.md  changelog.md  main.py  pyproject.toml
api/: README.md  api.py
heroku_config/: config_env.bash
playground/: 2021-06-22-initial-tests.ipynb  2021-07-01-top-down-approach-to-recursiveness.ipynb  2021-07-13 Proof of concept for basic calculator.ipynb  2021-08-06 file parser and processor.ipynb  2021-08-09 file manager.ipynb  2021-08-10 file level redaction calculator.ipynb  2021-08-19 improve mapper.ipynb  2021-08-19 word id level distance calculator.ipynb  2021-08-28 very simple mapper.ipynb
redactioncalculator/: __init__.py  distance.py  filemapper.py  helpers.py  main.py  mapper.py  outputmanager.py  variations.py
resources/: testfragment1
tests/: distance.py  mapper.py  with_dupes.txt
