[tool.poetry]
name = "redactioncalculator"
version = "0.1.0"
description = ""
authors = ["vvveracruz <me@vgg.cz>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.5"
matplotlib = "^3.4.2"
ipython = "^7.24.1"
tabulate = "^0.8.9"
numpy = "^1.21.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
